--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<title>The Simpsons Wiki</title>
 </head>
 <body>
-
-<h1>Homer</h1>
-<p>Homer Simpson (born May 12, 1956)</p>
+<p>this is another page</p>
 </body>
 </html>
