--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Homer</h1>
-<p>Homer Simpson (born May 12, 1956)</p>
+<p>Homer Simpson (born May 12, 1956) is the main protagonist of the series (alongside Bart). He is the spouse of Marge Simpson and father of Bart Simpson, Lisa Simpson, and Maggie Simpson.</p>
 <a href="pages/page2.html">page two</a>
 </body>
 </html>
