--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>The Simpsons Conspiracies </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+<h1> </h1>
 <p>this is another page</p>
 </body>
 </html>
