--- a/pages/page2.html
+++ b/pages/page2.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<title>The Simpsons Conspiracies </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-
-<h1> </h1>
-<p>this is another page</p>
+<h1>The Simpsons Conspiracies </h1>
+<p>Over its almost 30-year run, the series has alluded to many real-life events long before they’ve happened: The Trump presidency, the discovery of the Higgs boson particle, 9/11 and, most recently, Disney’s takeover of Fox. By some accounts, the coincidences – predictions, if you will – number in the 20s, possibly more.</p>
 </body>
 </html>
