--- a/index.html
+++ b/index.html
@@ -5,13 +5,52 @@
 <title>The Simpsons Wiki</title>
 </head>
 <body>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+</style>style>
+
+<ul>
+  <li><a class="active" href="index.html">Homer</a></li>
+  <li><a href="pages/page2.html">Conspiracies</a></li>
+  <li><a href="pages/projects.html">Projects</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
 <h1>Homer Simpson</h1>
 
 	<img src="homersimpsons.png" alt="" width="500" height="500">
 
 <p>Homer Simpson (born May 12, 1956) is the main protagonist of the series (alongside Bart). He is the spouse of Marge Simpson and father of Bart Simpson, Lisa Simpson, and Maggie Simpson.Homer is overweight (said to be ~240 lbs), lazy, and often ignorant to the world around him. Although Homer has many flaws, he has shown to have great caring, love, and even bravery to those he cares about and, sometimes, even others he doesn't.</p>
-<a href="pages/page2.html">page two</a>
+<a href="pages/page2.html">Conspiracies</a>
 </body>
 
 <h1>Facts</h1>
