--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 <title>The Simpsons Wiki</title>
+<script src="imad.js"></script>
 </head>
 <body>
+	<button onclick="thirdAngle()"> angles of a triangle </button>
 <style>
 ul {
   list-style-type: none;
@@ -43,6 +45,8 @@ li a:hover:not(.active) {
   <li><a href="pages/page2.html">Conspiracies</a></li>
   <li><a href="pages/projects.html">Projects</a></li>
   <li><a href="#about">About</a></li>
+   <li><a href="pages/Assignments.html">Assignments</a></li>
+
 </ul>
 
 <h1>Homer Simpson</h1>
