--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Simpsons Conspiracies </title>
-	<link rel="stylesheet" type="text/css" href="../style.css">
-</head>
-<body>
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <ul>
   <li><a class="active" href="../index.html">Homer</a></li>
   <li><a href="page2.html">Conspiracies</a></li>
   <li><a href="projects.html">Projects</a></li>
   <li><a href="#about">About</a></li>
- <li><a href="Assignments.html">assignments</a></li>
+  <li><a href="Assignments.html">assignments</a></li>
 </ul>
 
-</body>
-</html>
+
+
+
+
+
+
+
+
+
+</head>
+
