--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-
-<ul>
+<script type="text/javascript" src="../Imad.js"></script>
+</head>
+<body>
+	<ul>
   <li><a class="active" href="../index.html">Homer</a></li>
   <li><a href="page2.html">Conspiracies</a></li>
   <li><a href="projects.html">Projects</a></li>
   <li><a href="#about">About</a></li>
   <li><a href="Assignments.html">assignments</a></li>
 </ul>
+<button onclick="centuries()">  centuries</button>
 
 
 
@@ -17,8 +20,5 @@
 
 
 
-
-
-
-</head>
-
+</body>
+</html>
