--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ li a:hover:not(.active) {
   <li><a href="pages/page2.html">Conspiracies</a></li>
   <li><a href="pages/projects.html">Projects</a></li>
   <li><a href="#about">About</a></li>
-   <li><a href="pages/Assignments.html">Assignments</a></li>
+  <li><a href="pages/Assignments.html">Assignments</a></li>
 
 </ul>
 
@@ -52,34 +52,42 @@ li a:hover:not(.active) {
 
 	<img src="homersimpsons.png" alt="" width="500" height="500">
 
-<p>Homer Simpson (born May 12, 1956) is the main protagonist of the series (alongside Bart). He is the spouse of Marge Simpson and father of Bart Simpson, Lisa Simpson, and Maggie Simpson.Homer is overweight (said to be ~240 lbs), lazy, and often ignorant to the world around him. Although Homer has many flaws, he has shown to have great caring, love, and even bravery to those he cares about and, sometimes, even others he doesn't.</p>
+<!-- this is an introduction to homer simpson-->
+
+  <p>Homer Simpson (born May 12, 1956) is the main protagonist of the series (alongside Bart). He is the spouse of Marge Simpson and father of Bart Simpson, Lisa Simpson, and Maggie Simpson.Homer is overweight (said to be ~240 lbs), lazy, and often ignorant to the world around him. Although Homer has many flaws, he has shown to have great caring, love, and even bravery to those he cares about and, sometimes, even others he doesn't.</p>
+
 <a href="pages/page2.html">Conspiracies</a>
+
 </body>
 
 
-	<h1>Facts</h1>
+<h1>Facts</h1>
 
-	<p>Homer works as a low-level safety inspector at the Springfield Nuclear Power Plant in Sector 7G, although he is often incompetent and negligent towards his duty. He spends a great deal of his time at Moe's Tavern with his lifelong friends Barney, Carl, Lenny, and the bartender Moe. At his home, he can often be found sitting on the couch mindlessly watching TV while snacking on food and drinking Duff. Homer is also the only son of Abe and Mona. When Homer gets provoked, he strangles Bart for pressuring him. Even though he hates Patty and Selma, he played as Selma’s husband in order for her to adopt Ling.</p> 
+<!-- these are some facts about Homer Simpson -->
+
+	
+    <p>Homer works as a low-level safety inspector at the Springfield Nuclear Power Plant in Sector 7G, although he is often incompetent and negligent towards his duty. He spends a great deal of his time at Moe's Tavern with his lifelong friends Barney, Carl, Lenny, and the bartender Moe. At his home, he can often be found sitting on the couch mindlessly watching TV while snacking on food and drinking Duff. Homer is also the only son of Abe and Mona. When Homer gets provoked, he strangles Bart for pressuring him. Even though he hates Patty and Selma, he played as Selma’s husband in order for her to adopt Ling.</p> 
 
 		<button onclick="thirdangle()"> angles of a triangle </button>
 
 		<p>Homer may just be a normal man, but he has had many great achievements and experiences in his life. He has won a Grammy, an Academy Award, a Pulitzer Prize, been to space, and has saved Springfield many times.</p>
-	<h1>Criminal Record</h1>
+
+<h1>Criminal Record</h1>
 
 	  <!-- this is homer's criminal record-->
 
-	<ol>
-  <li>Animal cruelty</li>
-  <li>Bail jumping</li>
-  <li>Blast fishing</li>
-  <li>Burglary (unarmed)</li>
-  <li>Buying illegal fireworks</li>
-  <li>Child abuse</li>
-  <li>Defying a court order</li>
-   <li>Driving without a license</li>
+  <ol>
+    <li>Animal cruelty</li>
+    <li>Bail jumping</li>
+    <li>Blast fishing</li>
+    <li>Burglary (unarmed)</li>
+    <li>Buying illegal fireworks</li>
+    <li>Child abuse</li>
+    <li>Defying a court order</li>
+    <li>Driving without a license</li>
     <li>Enforced Suicide</li>
-  <li>Manslaughter</li>
-	</ol>
+    <li>Manslaughter</li>
+  </ol>
 
 </body> 
 </html>
