--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -13,5 +13,6 @@
          <li><a href="Assignments.html">assignments</a></li>
       </ul>
       <button onclick="centuries()"> centuries</button>
+      <button onclick="centuries()"> centuries</button>
    </body>
 </html>
