--- a/pages/page2.html
+++ b/pages/page2.html
@@ -12,6 +12,8 @@
          <li><a href="#about">About</a></li>
          <li><a href="Assignments.html">Assignments</a></li>
       </ul>
+            <!--These are some conspiraacies about the simpsons-->
+
       <h1>The Simpsons Conspiracies</h1>
       <p>Over its almost 30-year run, the series has alluded to many real-life events long before they’ve happened: The Trump presidency, the discovery of the Higgs boson particle, 9/11 and, most recently, Disney’s takeover of Fox. By some accounts, the coincidences – predictions, if you will – number in the 20s, possibly more.</p>
    </body>
