--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="../style.css">
       <script type="text/javascript" src="../Imad.js"></script>
    </head>
    <body>
@@ -12,7 +12,10 @@
          <li><a href="#about">About</a></li>
          <li><a href="Assignments.html">assignments</a></li>
       </ul>
-      <button onclick="centuries()"> centuries</button>
-      <button onclick="centuries()"> centuries</button>
+
+      <button class="Assignments" onclick="centuryFromYear()"> centuries</button>
+      <button class="Assignments"onclick="fourTen()"> fourtenGame</button>
+      <button class="Assignments"onclick="thirdangle()"> thirdangle</button>
+
    </body>
 </html>
