--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html <html>
    <head>
       <link rel="stylesheet" type="text/css" href="style.css">
       <title>The Simpsons Wiki</title>
