--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,7 +10,7 @@
          <li><a href="page2.html">Conspiracies</a></li>
          <li><a href="projects.html">Projects</a></li>
          <li><a href="#about">About</a></li>
-         <li><a href="Assignments.html">assignments</a></li>
+         <li><a href="Assignments.html">Assignments</a></li>
       </ul>
    </body>
 </html>
