--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,17 @@
    </head>
       <!-- these are some facts about me-->
    <body>
+     
+   <ul>
+         <li><a class="active" href="../index.html">Homer</a></li>
+         <li><a href="page2.html">Conspiracies</a></li>
+         <li><a href="projects.html">Projects</a></li>
+         <li><a href="#about">About</a></li>
+         <li><a href="Assignments.html">Assignments</a></li>
+      </ul>
+
+
+
       <p> My Name is Imad. I was born on the 10th of July,2003.Some of the things I enjoy to do are playing sports,playing video games,and reading.Some favourite sports include Basketball,Football,and Soccer.
       </p>
       <img src="5856a4f24f6ae202fedf2760.png" alt="" width="500" height="500">
