--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -10,12 +10,11 @@
          <li><a href="page2.html">Conspiracies</a></li>
          <li><a href="projects.html">Projects</a></li>
          <li><a href="#about">About</a></li>
-         <li><a href="Assignments.html">assignments</a></li>
+         <li><a href="Assignments.html">Assignments</a></li>
       </ul>
 
       <button class="Assignments" onclick="centuryFromYear()"> centuries</button>
       <button class="Assignments"onclick="fourTen()"> fourtenGame</button>
-      <button class="Assignments"onclick="thirdangle()"> thirdangle</button>
-
+      <button class="Assignments"onclick="thirdangle()"> thirdangle</button
    </body>
 </html>
