--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="pages/style.css">
       <title>The Simpsons Wiki</title>
       <script src="imad.js"></script>
    </head>
