fixed file paths

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -2,14 +2,14 @@
 <html>
    <head>
       <title>The Simpsons Conspiracies </title>
-      <link rel="stylesheet" type="text/css" href="../style.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
       <ul>
          <li><a class="active" href="../index.html">Homer</a></li>
          <li><a href="page2.html">Conspiracies</a></li>
          <li><a href="projects.html">Projects</a></li>
-         <li><a href="#about">About</a></li>
+         <li><a href="../aboutme.html">About</a></li>
          <li><a href="Assignments.html">Assignments</a></li>
       </ul>
             <!--These are some conspiraacies about the simpsons-->
