--- a/aboutme.html
+++ b/aboutme.html
@@ -9,10 +9,10 @@
      
    <ul>
          <li><a class="active" href="../index.html">Homer</a></li>
-         <li><a href="page2.html">Conspiracies</a></li>
-         <li><a href="projects.html">Projects</a></li>
-         <li><a href="#about">About</a></li>
-         <li><a href="Assignments.html">Assignments</a></li>
+         <li><a href="pages/page2.html">Conspiracies</a></li>
+         <li><a href="pages/projects.html">Projects</a></li>
+         <li><a href="aboutme.html">About</a></li>
+         <li><a href="pages/Assignments.html">Assignments</a></li>
       </ul>
 
 
