--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -15,6 +15,8 @@
 
       <button class="Assignments" onclick="centuryFromYear()"> centuries</button>
       <button class="Assignments"onclick="fourTen()"> fourtenGame</button>
-      <button class="Assignments"onclick="thirdangle()"> thirdangle</button
+      <button class="Assignments"onclick="thirdangle()"> thirdangle</button>
+      <button class="Assignments"onclick="WordLength()"> WordLength</button>
+
    </body>
 </html>
