--- a/pages/Assignments.html
+++ b/pages/Assignments.html
@@ -17,6 +17,10 @@
       <button class="Assignments"onclick="fourTen()"> fourtenGame</button>
       <button class="Assignments"onclick="thirdangle()"> thirdangle</button>
       <button class="Assignments"onclick="WordLength()"> WordLength</button>
+      <button class="Assignments"onclick="Enc()"> Enc</button>
+      <button class="Assignments"onclick="dec()"> dec</button>
+
+
 
    </body>
 </html>
