--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
    <h1>Facts</h1>
    <p>
    Homer works as a low-level safety inspector at the Springfield Nuclear Power Plant in Sector 7G, although he is often incompetent and negligent towards his duty. He spends a great deal of his time at Moe's Tavern with his lifelong friends Barney, Carl, Lenny, and the bartender Moe. At his home, he can often be found sitting on the couch mindlessly watching TV while snacking on food and drinking Duff. Homer is also the only son of Abe and Mona. When Homer gets provoked, he strangles Bart for pressuring him. Even though he hates Patty and Selma, he played as Selma’s husband in order for her to adopt Ling. </p>
+
    <button onclick="thirdangle()"> angles of a triangle </button>
+   <button onclick="Encrypt()"> click to encrypt</button>
+   <button onclick="Decrypt()"> click to decrypt</button>
+
    <p>Homer may just be a normal man, but he has had many great achievements and experiences in his life. He has won a Grammy, an Academy Award, a Pulitzer Prize, been to space, and has saved Springfield many times.</p>
    <!-- this is homer's criminal record-->
+
    <h1>Criminal Record</h1>
    <ol>
       <li>Animal cruelty</li>
